--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -17,7 +17,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+      with:
+       fetch-depth: 0
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
 
