--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -19,6 +19,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
        fetch-depth: 0
+       
+    - name: Get git infos
+      id: git-data
+      run: |
+        echo "::set-output name=hash::$GITHUB_SHA"
+        echo "::set-output name=msg::$(git log -1 --pretty=format:"%s")"
+        echo "::set-output name=count::$(git rev-list --count HEAD)"
+        
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
 
@@ -31,12 +39,10 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
-    - name: Get git infos
-      id: git-data
-      run: |
-        echo "::set-output name=hash::$(git rev-parse --short "$GITHUB_SHA")"
-        echo "::set-output name=msg::$(git log -1 --pretty=format:"%s")"
-        echo "::set-output name=count::$(git rev-list --count HEAD)"
+      
+    - name: List files
+      run: Get-Childitem -Path . -Recurse
+      
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -50,6 +56,7 @@ jobs:
           *This is an automated CI build for ${{ steps.git-data.outputs.hash }}.*
           `${{ steps.git-data.outputs.msg }}`
         draft: false
+        
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
